# RendererZ

./: .gitignore  CMakeLists.txt  RESUME_ROADMAP.md  TODO.md  project.json
.cache/clangd/index/: Camera.h.9E1EC233D25C59F1.idx  Drawable.h.EE6BB03590C13B0B.idx  Input.h.24FC87D669D00757.idx  Primitives.h.BEB9BADB63E560F1.idx  Texture.h.F02E2966F6B9DD9E.idx  Window.h.4AE896E15F65F690.idx  Window.h.6D8FB872DD6EE1FE.idx  camera.cpp.9C60D282AD31F983.idx  cube.cpp.A2255933B200ACE1.idx  drawable.cpp.D2A6D96C6F50DB28.idx  glad.c.F04A2145FFD7D8B0.idx  glad.h.09CEC154C24D9E0D.idx  global.cpp.B79FBDF1AB10F605.idx  global.h.E108EE43732BABE5.idx  input.cpp.B5F1DA9ED29CD34B.idx  khrplatform.h.167D5CD99156237A.idx  main.cpp.8C94204596ACA23B.idx  main.h.9A19D93A440AD9A5.idx  mat.h.016CC78683A1EDB6.idx  math.cpp.6C9EFEBC71D4E294.idx  math.h.D46C07764D4B1DB9.idx  matrix.cpp.B9CAD6C38F6C8ABC.idx  rect.cpp.24DF8F588AA91F11.idx  shaders.cpp.4CD977D60E9CAD3F.idx  shaders.h.A52C687C21AC1E11.idx  stb_image.h.5F5F368BC4586E7F.idx  texture.cpp.E4D7CDD0F2E5FFCA.idx  tri.cpp.DE9DB1AB83140A0F.idx  vec.h.62D97EBE1282D7E1.idx  vector.cpp.1ED646DD57104D19.idx  window.cpp.1F9A27CD3EBA6563.idx  window.cpp.3C94E0DB0C772251.idx
include/: glad.c  glad.h
src/: global.cpp  global.h  main.cpp  main.h
src/Input/: Input.h  input.cpp
src/Math/: mat.h  math.cpp  math.h  matrix.cpp  vec.h  vector.cpp
src/Objects/: Drawable.h  LightSource.h  Object.h  Primitives.h  Texture.h  Types.h  Window.h  drawable.cpp  lightSource.cpp  object.cpp  primitives.cpp  texture.cpp  types.cpp  window.cpp
src/Objects/Primatives/: cube.cpp  rect.cpp  tri.cpp
src/Shaders/: frag.frag  lightVertex.vert  multiTex.frag  objectFrag.frag  objectVertex.vert  shaders.cpp  shaders.h  vertex.vert
src/System/: Camera.h  Events.h  Window.h  camera.cpp  window.cpp
src/Tools/: ObjectLoading.h  objectLoading.cpp
src/temp/Color/: color.cpp
src/temp/Matrix/: matrix.cpp
src/temp/Vector/: vector.cpp
